# transcriber

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  AUDIT_LOG_GUIDE.md  CLAUDE.md  CONTEXT.md  CONTRIBUTING.md  DEADLOCK_FIX.md  DIAGNOSIS_PLAN.md  Dockerfile  FINAL_FIX.md  FRONTEND_MIGRATION_GUIDE.md  FRONTEND_MIGRATION_PROGRESS.md  GIL_PROBLEM.md  IMPROVEMENT_TASKS.md  MEMORY_OPTIMIZATIONS.md  MONGODB_REFACTORING_GUIDE.md  NATIVE_SETUP.md  QUICKSTART.md  README.md  REFACTORING_SUMMARY.md  SEQUENTIAL_FIX.md  STAGE2_GUIDE.md  STAGE3_SUMMARY.md  api_keys.json  benchmark_parallel.py  check_tags.py  check_user_id_format.py  diagnose_memory.sh  docker-compose.frontend-only.yml  docker-compose.yml  index.html  migrate_legacy_tasks.py  migrate_to_nested_structure.py  monitor_memory.sh  package-lock.json  package.json  pyproject.toml  refactor_to_mongodb.py  (+16 more)
.claude/: settings.json
.github/: dependabot.yml
admin-frontend/: Dockerfile  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  tsconfig.json  vite.config.js
assets/: index-B1b_-MV2.js  index-DRI5SUuk.css  index-Dj43z5Jp.js
backups/: tasks_backup_20260106_135024.json
deploy/: .env.aws  .env.aws.staging  apply-s3-lifecycle.sh  aws-alarms.sh  deploy-gpu-worker.sh  deploy-web.sh  nginx-ec2.conf  nginx-staging.conf  pre-start-cleanup.sh  rollback.sh  transcriber-worker.service  transcriber.service  worker-associate-eip.sh
docs/: ACCOUNT_DELETION_GDPR.md  ADMIN_RBAC_PLAN.md  ADMIN_ROADMAP.md  ADMIN_TOKEN_STORAGE_EVALUATION.md  AUDIT_LOG_GUIDE.md  AWS_CICD_SETUP.md  AWS_DEPLOYMENT_PLAN.md  DEPLOYMENT.md  DIARIZATION_OPTIMIZATION.md  DOCKER_README.md  EXTERNAL_SERVICES.md  IMPROVEMENT_TASKS.md  LAUNCH_READINESS_PLAN.md  MONITORING_SETUP.md  NEWEBPAY_PERIOD_API.md  POSTMORTEM_2026-05-30_multi_worker.md  PRIVACY_POLICY.md  RESILIENCE_ROADMAP.md  STAGING_PLAN.md  SUBSCRIPTION_DOWNGRADE_FLOW.md  TAIWANESE_ASR_PLAN.md  XSS_AUDIT_TODO.md  privacy-policy.md  terms-of-service.md  test-accounts.md
frontend/: .env.production  .env.tailscale  Dockerfile  README.md  index.html  (+7 more)
(+382 files in other folders)
